containers/kubernetes/registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: registry
    namespace: nrocinu
spec:
    replicas: 1
    selector:
        matchLabels:
            app: registry
    template:
        metadata:
            labels:
                app: registry
        spec:
            containers:
                - name: registry
                  image: registry:2.7
                  imagePullPolicy: Always
                  ports:
                      - name: http
                        containerPort: 5000
                  volumeMounts:
                      - name: registry-storage
                        mountPath: /var/lib/registry
                      - name: registry-secret
                        mountPath: /.htpasswd
                        subPath: htpasswd
            volumes:
                - name: registry-storage
                  hostPath:
                      path: /opt/nrocinu/registry
                - name: registry-secret
                  secret:
                      secretName: registry
