containers/kubernetes/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: registry
    namespace: nrocinu
spec:
    selector:
        app: registry
    ports:
        - name: http
          protocol: TCP
          port: 5000
          targetPort: http
