containers/kubernetes/registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: registry
    namespace: nrocinu
    annotations:
        nginx.ingress.kubernetes.io/proxy-body-size: "0"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
        cert-manager.io/cluster-issuer: letsencrypt
spec:
    ingressClassName: public
    rules:
        - host: registry.optirec.ml
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: registry
                            port:
                                number: 5000
    tls:
        - secretName: tls-secret
